--- a/src/css/home/_info.scss
+++ b/src/css/home/_info.scss
@@ -1,12 +1,17 @@
 .info{
     display: flex;
     flex-direction: column;
-    margin-top: 70px;
+    margin: 0 auto;
+    margin-top: 80px;
     gap: 40px;
     width: 100%;
+    max-width: 1280px;
     overflow-x: hidden;
+    align-items: center;
+
     @media screen and (min-width: 1024px) {
-        margin-top: 120px;
+        overflow-x: visible;
+        margin-top: 180px;
         flex-direction: row;
         justify-content: space-between;
         width: 100%;
@@ -15,12 +20,14 @@
     }
 
     .info-img{
-        width: 130%;
-        overflow: hidden;
-        @media screen and (min-width: 768px) {
-            width: 110%;
+        width: 90%;
+
+        @media screen and (min-width: 768px){
+            width: 70%;
         }
+        
         @media screen and (min-width: 1024px) {
+            width: 50%;
             order: 2;
             flex-basis: 50%;
             position: relative;
@@ -35,6 +42,7 @@
         align-items: center;
         text-align: center;
         gap: 20px;
+        padding: 20px;
         @media screen and (min-width: 1024px) {
             text-align: left;
             align-items: start;
