--- a/src/css/home/_links.scss
+++ b/src/css/home/_links.scss
@@ -6,11 +6,18 @@
     align-items: center;
     margin-bottom: 50px;
     gap: 20px;
+    max-width: 868px;
+    
     @media screen and (min-width: 768px) {
         width: 70%;
         margin-left: auto;
         margin-right: auto;
     }
+    
+    @media screen and (min-width: 1024px) {
+        margin-bottom: 100px;
+    }
+    
     
     .link{
         width: 100%;
