--- a/src/css/home/home.css
+++ b/src/css/home/home.css
@@ -1,27 +1,35 @@
 header {
   left: 0;
   top: 0;
-  width: 100vw;
+  width: 100%;
   position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   padding: 20px;
   background-color: white;
   z-index: 1000;
+  display: flex;
+  justify-content: center;
+  transition: box-shadow 0.2s;
+}
+header.shadow {
+  box-shadow: 0 5px 15px 3px rgba(0, 0, 0, 0.123);
 }
 @media screen and (min-width: 768px) {
   header {
-    padding: 30px;
+    padding: 40px;
   }
 }
 @media screen and (min-width: 1024px) {
   header {
-    padding: 30px 100px;
-    max-width: 1280px;
-    left: 50%;
-    transform: translateX(-50%);
+    padding: 35px;
   }
+}
+header .content {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1440px;
 }
 header .logo {
   -webkit-user-select: none;
@@ -39,6 +47,11 @@ header .menu-icon {
 @media screen and (min-width: 768px) {
   header .menu-icon {
     font-size: 30px;
+  }
+}
+@media screen and (min-width: 1024px) {
+  header .menu-icon {
+    display: none;
   }
 }
 header .menu-icon:active {
@@ -70,9 +83,15 @@ header .menu-container {
 }
 @media screen and (min-width: 1024px) {
   header .menu-container {
-    width: 20%;
+    background-color: transparent;
+    color: #232127;
+    position: static;
+    flex-direction: row;
+    width: -moz-max-content;
+    width: max-content;
     transform: none;
-    left: 79%;
+    align-items: center;
+    padding: 0;
   }
 }
 header .menu-container .menu-opt {
@@ -85,30 +104,46 @@ header .menu-container .menu-opt:nth-child(4) {
   padding-top: 25px;
   border-top: 1px solid rgba(201, 201, 201, 0.5);
 }
+@media screen and (min-width: 1024px) {
+  header .menu-container .menu-opt:nth-child(4) {
+    padding-top: 0;
+    border: none;
+    margin-left: 50px;
+  }
+}
 header .menu-container .menu-opt:nth-child(5) {
+  color: white;
   background-color: #2acfcf;
   padding: 12px;
   border-radius: 50px;
+}
+@media screen and (min-width: 1024px) {
+  header .menu-container .menu-opt:nth-child(5) {
+    padding: 8px 17px;
+  }
 }
 header .menu-container .menu-opt:nth-child(5):active {
   transform: scale(0.96);
 }
 header .menu-container .menu-opt:nth-child(5):hover {
   background-color: #59dddd;
-  color: white;
 }
 
 .info {
   display: flex;
   flex-direction: column;
-  margin-top: 70px;
+  margin: 0 auto;
+  margin-top: 80px;
   gap: 40px;
   width: 100%;
+  max-width: 1280px;
   overflow-x: hidden;
+  align-items: center;
 }
 @media screen and (min-width: 1024px) {
   .info {
-    margin-top: 120px;
+    overflow-x: visible;
+    margin-top: 180px;
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
@@ -117,16 +152,16 @@ header .menu-container .menu-opt:nth-child(5):hover {
   }
 }
 .info .info-img {
-  width: 130%;
-  overflow: hidden;
+  width: 90%;
 }
 @media screen and (min-width: 768px) {
   .info .info-img {
-    width: 110%;
+    width: 70%;
   }
 }
 @media screen and (min-width: 1024px) {
   .info .info-img {
+    width: 50%;
     order: 2;
     flex-basis: 50%;
     position: relative;
@@ -140,6 +175,7 @@ header .menu-container .menu-opt:nth-child(5):hover {
   align-items: center;
   text-align: center;
   gap: 20px;
+  padding: 20px;
 }
 @media screen and (min-width: 1024px) {
   .info .call-to-action {
@@ -171,6 +207,7 @@ header .menu-container .menu-opt:nth-child(5):hover {
 }
 
 .short-links {
+  max-width: 868px;
   background-color: #3b3054;
   background-repeat: no-repeat;
   background-position: 100% 0;
@@ -281,12 +318,18 @@ header .menu-container .menu-opt:nth-child(5):hover {
   align-items: center;
   margin-bottom: 50px;
   gap: 20px;
+  max-width: 868px;
 }
 @media screen and (min-width: 768px) {
   .links {
     width: 70%;
     margin-left: auto;
     margin-right: auto;
+  }
+}
+@media screen and (min-width: 1024px) {
+  .links {
+    margin-bottom: 100px;
   }
 }
 .links .link {
@@ -557,16 +600,16 @@ footer .social-icons li:first-child {
 }
 
 .app {
-  max-width: 1280px;
   margin: 0 auto;
 }
 
 .bg-1, .bg-2 {
-  padding: 20px;
   width: 100%;
 }
 
 .bg-1 {
+  overflow-x: hidden;
+  padding: 40px 0;
   background-color: white;
 }
 @media screen and (min-width: 1024px) {
@@ -577,6 +620,7 @@ footer .social-icons li:first-child {
 }
 
 .bg-2 {
+  padding: 20px;
   background-color: #EFF1F7;
   padding-bottom: 0;
 }
