--- a/src/css/home/home.scss
+++ b/src/css/home/home.scss
@@ -14,16 +14,18 @@ $bg-2: #EFF1F7;
 
 
 .app{
-    max-width: 1280px;
+    // max-width: 1280px;
     margin: 0 auto;
+    
 }
 
 .bg-1,  .bg-2{
-    padding: 20px;
     width: 100%;
 }
 
 .bg-1{
+    overflow-x: hidden;
+    padding: 40px 0;
     background-color: $bg-1;
     @media screen and (min-width: 1024px) {
         padding-left: 100px;
@@ -33,6 +35,7 @@ $bg-2: #EFF1F7;
 }
 
 .bg-2{
+    padding: 20px;
     background-color: $bg-2;
     padding-bottom: 0;
     @media screen and (min-width: 1024px) {
