--- a/src/css/home/_footer.scss
+++ b/src/css/home/_footer.scss
@@ -15,6 +15,7 @@
     align-items: center;
     color: white;
     gap: 20px;
+
     @media screen and (min-width: 1024px) {
      padding: 70px 0;       
     }
@@ -28,10 +29,11 @@ footer{
     justify-content: center;
     align-items: center;
     padding: 40px 0;
+
     @media screen and (min-width: 1024px) {
      flex-direction: row; 
      align-items: start;  
-     justify-content: space-between;    
+     justify-content: center;    
      gap: 50px;
      padding: 50px 100px;
     }
